manifests/operators/lightspeed-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-lightspeed
