manifests/operators/rhoai-subscription.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
